[gd_scene load_steps=15 format=2]

[ext_resource path="res://scripts/TelaInicial.gd" type="Script" id=1]
[ext_resource path="res://fonts/Comfortaa-Regular.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://sprites/TelaInicial.png" type="Texture" id=3]
[ext_resource path="res://sprites/Logo.png" type="Texture" id=4]
[ext_resource path="res://botaohover.tres" type="StyleBox" id=5]
[ext_resource path="res://sprites/botão.png" type="Texture" id=6]
[ext_resource path="res://botaopressed.tres" type="StyleBox" id=7]
[ext_resource path="res://sprites/botaohover.png" type="Texture" id=8]
[ext_resource path="res://fonts/Font.tres" type="DynamicFont" id=9]

[sub_resource type="StyleBoxTexture" id=1]
texture = ExtResource( 8 )
region_rect = Rect2( 0, 0, 203, 36 )

[sub_resource type="StyleBoxTexture" id=2]
texture = ExtResource( 8 )
region_rect = Rect2( 0, 0, 203, 36 )

[sub_resource type="StyleBoxTexture" id=3]
texture = ExtResource( 6 )
region_rect = Rect2( 0, 0, 203, 36 )

[sub_resource type="StyleBoxTexture" id=4]
texture = ExtResource( 6 )
region_rect = Rect2( 0, 0, 203, 36 )

[sub_resource type="DynamicFont" id=5]
font_data = ExtResource( 2 )

[node name="Tela Inicial" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CenterContainer" type="CenterContainer" parent="."]
margin_right = 1024.0
margin_bottom = 600.0
size_flags_horizontal = 0
size_flags_vertical = 0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TelaInicial" type="Sprite" parent="CenterContainer"]
position = Vector2( 510.246, 300.016 )
scale = Vector2( 0.834449, 0.834449 )
texture = ExtResource( 3 )

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer"]
margin_left = 298.0
margin_top = 149.0
margin_right = 726.0
margin_bottom = 451.0
custom_constants/separation = 50
script = ExtResource( 1 )

[node name="TextureRect" type="TextureRect" parent="CenterContainer/VBoxContainer"]
margin_left = -1.0
margin_top = -1.0
margin_right = 427.819
margin_bottom = 71.222
rect_min_size = Vector2( 428.819, 72.222 )
size_flags_horizontal = 4
size_flags_vertical = 4
texture = ExtResource( 4 )
expand = true
stretch_mode = 6
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AlinhamentoV" type="VBoxContainer" parent="CenterContainer/VBoxContainer"]
margin_top = 122.0
margin_right = 428.0
margin_bottom = 302.0
custom_constants/separation = 20
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Carregar Jogo" type="Button" parent="CenterContainer/VBoxContainer/AlinhamentoV"]
margin_left = 114.0
margin_right = 314.0
margin_bottom = 30.0
rect_min_size = Vector2( 200, 30 )
focus_mode = 0
size_flags_horizontal = 4
size_flags_vertical = 0
custom_styles/hover = SubResource( 1 )
custom_styles/pressed = SubResource( 2 )
custom_styles/normal = SubResource( 3 )
custom_fonts/font = ExtResource( 9 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Carregar Jogo"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Creditos" type="Button" parent="CenterContainer/VBoxContainer/AlinhamentoV"]
margin_left = 114.0
margin_top = 50.0
margin_right = 314.0
margin_bottom = 80.0
rect_min_size = Vector2( 200, 30 )
focus_mode = 0
size_flags_horizontal = 4
size_flags_vertical = 0
custom_styles/hover = ExtResource( 5 )
custom_styles/pressed = ExtResource( 7 )
custom_styles/normal = SubResource( 4 )
custom_fonts/font = SubResource( 5 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Creditos"
__meta__ = {
"_edit_use_anchors_": false,
"_editor_description_": ""
}

[node name="Opcoes" type="Button" parent="CenterContainer/VBoxContainer/AlinhamentoV"]
margin_left = 114.0
margin_top = 100.0
margin_right = 314.0
margin_bottom = 130.0
rect_min_size = Vector2( 200, 30 )
focus_mode = 0
size_flags_horizontal = 4
size_flags_vertical = 0
custom_styles/hover = ExtResource( 5 )
custom_styles/pressed = ExtResource( 7 )
custom_styles/normal = SubResource( 4 )
custom_fonts/font = SubResource( 5 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Opções"
__meta__ = {
"_edit_use_anchors_": false,
"_editor_description_": ""
}

[node name="Sair do jogo" type="Button" parent="CenterContainer/VBoxContainer/AlinhamentoV"]
margin_left = 114.0
margin_top = 150.0
margin_right = 314.0
margin_bottom = 180.0
rect_min_size = Vector2( 200, 30 )
focus_mode = 0
size_flags_horizontal = 4
size_flags_vertical = 0
custom_styles/hover = ExtResource( 5 )
custom_styles/pressed = ExtResource( 7 )
custom_styles/normal = SubResource( 4 )
custom_fonts/font = SubResource( 5 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Sair do jogo"
__meta__ = {
"_edit_use_anchors_": false,
"_editor_description_": ""
}

[node name="Versão" type="Label" parent="."]
margin_left = 944.0
margin_top = 584.0
margin_right = 1016.0
margin_bottom = 598.0
text = "Version 1.0"
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="pressed" from="CenterContainer/VBoxContainer/AlinhamentoV/Carregar Jogo" to="CenterContainer/VBoxContainer" method="_on_Carregar_Jogo_pressed"]
[connection signal="pressed" from="CenterContainer/VBoxContainer/AlinhamentoV/Creditos" to="CenterContainer/VBoxContainer" method="_on_Creditos_pressed"]
[connection signal="pressed" from="CenterContainer/VBoxContainer/AlinhamentoV/Opcoes" to="CenterContainer/VBoxContainer" method="_on_Opcoes_pressed"]
[connection signal="pressed" from="CenterContainer/VBoxContainer/AlinhamentoV/Sair do jogo" to="CenterContainer/VBoxContainer" method="_on_Sair_do_jogo_pressed"]
